--- a/style.css
+++ b/style.css
@@ -1,18 +1,13 @@
 body {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1, auto;
     justify-content: center;
-    align-items: flex-start;
     flex: none;
 }
 
 .container{
     display: grid;
-    width: 500px;
-    max-width:1000px;
-    height:500px;
-}
-
-.grid {
-
+    margin: 20px;
+    width: 800px;
+    height:800px;
 }
